fix(steam): content appearing out of bounds
OH MY GOOOOOOOOOOOOOOOOOOOOOOOOOOD it's been 2 fucking years and steam
hasn't fixed this despite being present on a normal installation
lmfaooooooooooooo

--- a/src/steam/shared/dialogshared.scss
+++ b/src/steam/shared/dialogshared.scss
@@ -10,6 +10,11 @@
 	display: none;
 }
 
+.ModalDialogPopup {
+	position: fixed;
+	inset: 0;
+}
+
 .ModalPosition {
 	background-image: none;
 }
